forecast fixed needs better bkgrd imgs

--- a/public/index.html
+++ b/public/index.html
@@ -40,4 +40,5 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
-</html>
+  <a href='https://pngtree.com/so/vintage'>vintage png from pngtree.com</a>
+  </html>
